# bash-vet-mcp

./: CHANGELOG.md  Dockerfile  README.md  SPEC.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/bash_vet_mcp/: __init__.py  __main__.py  demo.py  render.py  report.py  scanner.py  server.py  types.py
tests/: test_scanner.py  test_server.py
